# HamatteruProjectBeta

./: README.md  db.sqlite3  pyproject.toml
accounts/: views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: base.py
health/: models.py  views.py
health/migrations/: 0001_initial.py
templates/: base.html
