[tool.poetry]
name = "hamatteru"
version = "0.1.0"
description = ""
authors = ["SORARAwo4649 <k11274649@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-debug-toolbar = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
